{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 110,
  "lineage": "13c60340-61e2-07ed-2419-8bcc35b48cf8",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06124b567f8becfbd",
            "arn": "arn:aws:ec2:us-east-1:989311237020:instance/i-0c2403f1a1335a307",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2403f1a1335a307",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f62f6e1032f60ac0"
              }
            ],
            "primary_network_interface_id": "eni-0f62f6e1032f60ac0",
            "private_dns": "ip-10-0-101-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.238",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd71059f564a4c7f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d22fe6fcbd3cf48d",
            "tags": {
              "Name": "nsmasm-Backend-1"
            },
            "tags_all": {
              "Name": "nsmasm-Backend-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fc6b66487b0c4b9"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "i-0c2403f1a1335a307",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.data.aws_ami.ami_linux",
            "module.database.aws_db_instance.rds_mysql",
            "module.database.aws_db_subnet_group.db_group",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.backend_sg",
            "module.security_groups.aws_security_group.rds_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06124b567f8becfbd",
            "arn": "arn:aws:ec2:us-east-1:989311237020:instance/i-0d0a0346f436502d1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d0a0346f436502d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e3f4f996125813d4"
              }
            ],
            "primary_network_interface_id": "eni-0e3f4f996125813d4",
            "private_dns": "ip-10-0-102-99.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.99",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fedd25101d62ea6f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015d0dc4711f22810",
            "tags": {
              "Name": "nsmasm-Backend-2"
            },
            "tags_all": {
              "Name": "nsmasm-Backend-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fc6b66487b0c4b9"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "i-0d0a0346f436502d1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.data.aws_ami.ami_linux",
            "module.database.aws_db_instance.rds_mysql",
            "module.database.aws_db_subnet_group.db_group",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.backend_sg",
            "module.security_groups.aws_security_group.rds_sg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06124b567f8becfbd",
            "arn": "arn:aws:ec2:us-east-1:989311237020:instance/i-006369a4c45f92a03",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006369a4c45f92a03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07863910d4b090500"
              }
            ],
            "primary_network_interface_id": "eni-07863910d4b090500",
            "private_dns": "ip-10-0-101-86.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.86",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec6b419ad5fd8ab6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d22fe6fcbd3cf48d",
            "tags": {
              "Name": "nsmasm-Backend-3"
            },
            "tags_all": {
              "Name": "nsmasm-Backend-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09fc6b66487b0c4b9"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "i-006369a4c45f92a03",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.data.aws_ami.ami_linux",
            "module.database.aws_db_instance.rds_mysql",
            "module.database.aws_db_subnet_group.db_group",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.backend_sg",
            "module.security_groups.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06124b567f8becfbd",
            "arn": "arn:aws:ec2:us-east-1:989311237020:instance/i-0a7296f709ce18e20",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7296f709ce18e20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f13f9bc5b5852d52"
              }
            ],
            "primary_network_interface_id": "eni-0f13f9bc5b5852d52",
            "private_dns": "ip-10-0-1-75.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.75",
            "public_dns": "ec2-54-198-62-158.compute-1.amazonaws.com",
            "public_ip": "54.198.62.158",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07a5e6193c8bb8373",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026ff6b74137fed6f",
            "tags": {
              "Name": "nsmasm-WebServer-Static"
            },
            "tags_all": {
              "Name": "nsmasm-WebServer-Static"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c77a2408c2e0af02"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "i-0a7296f709ce18e20",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.data.aws_ami.ami_linux",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e-20251114020013187200000006",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e",
            "target_id": "i-0c2403f1a1335a307"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_instance.backend_server",
            "module.compute.data.aws_ami.ami_linux",
            "module.database.aws_db_instance.rds_mysql",
            "module.database.aws_db_subnet_group.db_group",
            "module.lb.aws_lb_target_group.lb3_tg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.backend_sg",
            "module.security_groups.aws_security_group.rds_sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e-20251114020013184200000004",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e",
            "target_id": "i-0d0a0346f436502d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_instance.backend_server",
            "module.compute.data.aws_ami.ami_linux",
            "module.database.aws_db_instance.rds_mysql",
            "module.database.aws_db_subnet_group.db_group",
            "module.lb.aws_lb_target_group.lb3_tg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.backend_sg",
            "module.security_groups.aws_security_group.rds_sg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e-20251114020013184200000005",
            "port": 8080,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e",
            "target_id": "i-006369a4c45f92a03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_instance.backend_server",
            "module.compute.data.aws_ami.ami_linux",
            "module.database.aws_db_instance.rds_mysql",
            "module.database.aws_db_subnet_group.db_group",
            "module.lb.aws_lb_target_group.lb3_tg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.backend_sg",
            "module.security_groups.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_static_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb2-tg-caf575d7/b822d221d103b903-20251114014857461100000002",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb2-tg-caf575d7/b822d221d103b903",
            "target_id": "i-0a7296f709ce18e20"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_instance.web_static",
            "module.compute.data.aws_ami.ami_linux",
            "module.lb.aws_lb_target_group.lb2_tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb1-frontend-caf575d7/4f0b3f8185c6ca32",
            "arn_suffix": "app/nsmasm-lb1-frontend-caf575d7/4f0b3f8185c6ca32",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nsmasm-lb1-frontend-caf575d7-980757555.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb1-frontend-caf575d7/4f0b3f8185c6ca32",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nsmasm-lb1-frontend-caf575d7",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-02d78acbe66062ae3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023138c4d81b7f9e4"
              },
              {
                "subnet_id": "subnet-026ff6b74137fed6f"
              }
            ],
            "subnets": [
              "subnet-023138c4d81b7f9e4",
              "subnet-026ff6b74137fed6f"
            ],
            "tags": {
              "Name": "nsmasm-lb1"
            },
            "tags_all": {
              "Name": "nsmasm-lb1"
            },
            "vpc_id": "vpc-03283d87772549e64",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb1-frontend-caf575d7/4f0b3f8185c6ca32"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb2-webstatic-caf575d7/4e974bd00ca4aa14",
            "arn_suffix": "app/nsmasm-lb2-webstatic-caf575d7/4e974bd00ca4aa14",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nsmasm-lb2-webstatic-caf575d7-1474803511.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb2-webstatic-caf575d7/4e974bd00ca4aa14",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nsmasm-lb2-webstatic-caf575d7",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-02d78acbe66062ae3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023138c4d81b7f9e4"
              },
              {
                "subnet_id": "subnet-026ff6b74137fed6f"
              }
            ],
            "subnets": [
              "subnet-023138c4d81b7f9e4",
              "subnet-026ff6b74137fed6f"
            ],
            "tags": {
              "Name": "nsmasm-lb2"
            },
            "tags_all": {
              "Name": "nsmasm-lb2"
            },
            "vpc_id": "vpc-03283d87772549e64",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb2-webstatic-caf575d7/4e974bd00ca4aa14"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb3-backend-caf575d7/d83666ccaec7bd37",
            "arn_suffix": "app/nsmasm-lb3-backend-caf575d7/d83666ccaec7bd37",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nsmasm-lb3-backend-caf575d7-167644879.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb3-backend-caf575d7/d83666ccaec7bd37",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nsmasm-lb3-backend-caf575d7",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-02d78acbe66062ae3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023138c4d81b7f9e4"
              },
              {
                "subnet_id": "subnet-026ff6b74137fed6f"
              }
            ],
            "subnets": [
              "subnet-023138c4d81b7f9e4",
              "subnet-026ff6b74137fed6f"
            ],
            "tags": {
              "Name": "nsmasm-lb3"
            },
            "tags_all": {
              "Name": "nsmasm-lb3"
            },
            "vpc_id": "vpc-03283d87772549e64",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb3-backend-caf575d7/d83666ccaec7bd37"
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb1_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:listener/app/nsmasm-lb1-frontend-caf575d7/4f0b3f8185c6ca32/5ca7db908914d3df",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "nsmasm-static-site-09dd8a534889b49b.s3-website-us-east-1.amazonaws.com",
                    "path": "/#{path}",
                    "port": "#{port}",
                    "protocol": "HTTP",
                    "query": "#{query}",
                    "status_code": "HTTP_302"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:listener/app/nsmasm-lb1-frontend-caf575d7/4f0b3f8185c6ca32/5ca7db908914d3df",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb1-frontend-caf575d7/4f0b3f8185c6ca32",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:listener/app/nsmasm-lb1-frontend-caf575d7/4f0b3f8185c6ca32/5ca7db908914d3df"
          },
          "dependencies": [
            "module.lb.aws_lb.lb1",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.storage.aws_s3_bucket.static_site",
            "module.storage.aws_s3_bucket_website_configuration.site_conf",
            "module.storage.random_id.sufijo_bucket"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb2_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:listener/app/nsmasm-lb2-webstatic-caf575d7/4e974bd00ca4aa14/5831125153b197ad",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb2-tg-caf575d7/b822d221d103b903",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:listener/app/nsmasm-lb2-webstatic-caf575d7/4e974bd00ca4aa14/5831125153b197ad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb2-webstatic-caf575d7/4e974bd00ca4aa14",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:listener/app/nsmasm-lb2-webstatic-caf575d7/4e974bd00ca4aa14/5831125153b197ad"
          },
          "dependencies": [
            "module.lb.aws_lb.lb2",
            "module.lb.aws_lb_target_group.lb2_tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb3_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:listener/app/nsmasm-lb3-backend-caf575d7/d83666ccaec7bd37/3bfe61349353ace9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:listener/app/nsmasm-lb3-backend-caf575d7/d83666ccaec7bd37/3bfe61349353ace9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb3-backend-caf575d7/d83666ccaec7bd37",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:listener/app/nsmasm-lb3-backend-caf575d7/d83666ccaec7bd37/3bfe61349353ace9"
          },
          "dependencies": [
            "module.lb.aws_lb.lb3",
            "module.lb.aws_lb_target_group.lb3_tg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb1_tg_s3_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb1-tg-s3-caf575d7/5e81527c1f023ad5",
            "arn_suffix": "targetgroup/nsmasm-lb1-tg-s3-caf575d7/5e81527c1f023ad5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb1-tg-s3-caf575d7/5e81527c1f023ad5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nsmasm-lb1-tg-s3-caf575d7",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03283d87772549e64"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb1-tg-s3-caf575d7/5e81527c1f023ad5"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb2_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb2-tg-caf575d7/b822d221d103b903",
            "arn_suffix": "targetgroup/nsmasm-lb2-tg-caf575d7/b822d221d103b903",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb2-tg-caf575d7/b822d221d103b903",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb2-webstatic-caf575d7/4e974bd00ca4aa14"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nsmasm-lb2-tg-caf575d7",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nsmasm-lb2-tg"
            },
            "tags_all": {
              "Name": "nsmasm-lb2-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03283d87772549e64"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb2-tg-caf575d7/b822d221d103b903"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb3_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e",
            "arn_suffix": "targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:989311237020:loadbalancer/app/nsmasm-lb3-backend-caf575d7/d83666ccaec7bd37"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nsmasm-lb3-tg-caf575d7",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "nsmasm-lb3-tg"
            },
            "tags_all": {
              "Name": "nsmasm-lb3-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03283d87772549e64"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:989311237020:targetgroup/nsmasm-lb3-tg-caf575d7/ea7da71402b16c4e"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0852f25d4e9b1a413",
            "arn": "arn:aws:ec2:us-east-1:989311237020:elastic-ip/eipalloc-0852f25d4e9b1a413",
            "association_id": "eipassoc-047086d27bf6ba294",
            "domain": "vpc",
            "id": "eipalloc-0852f25d4e9b1a413",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0340f6a7880e7b1fa",
            "private_dns": "ip-10-0-1-30.ec2.internal",
            "private_ip": "10.0.1.30",
            "public_dns": "ec2-100-29-213-227.compute-1.amazonaws.com",
            "public_ip": "100.29.213.227",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:internet-gateway/igw-01c7363ea0cd69049",
            "id": "igw-01c7363ea0cd69049",
            "owner_id": "989311237020",
            "region": "us-east-1",
            "tags": {
              "Name": "nsmasm-igw"
            },
            "tags_all": {
              "Name": "nsmasm-igw"
            },
            "vpc_id": "vpc-03283d87772549e64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0852f25d4e9b1a413",
            "association_id": "eipassoc-047086d27bf6ba294",
            "connectivity_type": "public",
            "id": "nat-0b4d5e04654438db6",
            "network_interface_id": "eni-0340f6a7880e7b1fa",
            "private_ip": "10.0.1.30",
            "public_ip": "100.29.213.227",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-026ff6b74137fed6f",
            "tags": {
              "Name": "nsmasm-nat-gw"
            },
            "tags_all": {
              "Name": "nsmasm-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:route-table/rtb-0c2550955d6b15050",
            "id": "rtb-0c2550955d6b15050",
            "owner_id": "989311237020",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b4d5e04654438db6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nsmasm-private-rt"
            },
            "tags_all": {
              "Name": "nsmasm-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03283d87772549e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "rtb-0c2550955d6b15050",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:route-table/rtb-0e05cc7ba54727665",
            "id": "rtb-0e05cc7ba54727665",
            "owner_id": "989311237020",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c7363ea0cd69049",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nsmasm-public-rt"
            },
            "tags_all": {
              "Name": "nsmasm-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03283d87772549e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "rtb-0e05cc7ba54727665",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ee522df5f245246",
            "region": "us-east-1",
            "route_table_id": "rtb-0c2550955d6b15050",
            "subnet_id": "subnet-0d22fe6fcbd3cf48d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0537e6da73ad46f0f",
            "region": "us-east-1",
            "route_table_id": "rtb-0c2550955d6b15050",
            "subnet_id": "subnet-015d0dc4711f22810"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f2512b864dfee70",
            "region": "us-east-1",
            "route_table_id": "rtb-0e05cc7ba54727665",
            "subnet_id": "subnet-026ff6b74137fed6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecf97dd30eddfe23",
            "region": "us-east-1",
            "route_table_id": "rtb-0e05cc7ba54727665",
            "subnet_id": "subnet-023138c4d81b7f9e4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:subnet/subnet-0d22fe6fcbd3cf48d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d22fe6fcbd3cf48d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "989311237020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nsmasm-private-1"
            },
            "tags_all": {
              "Name": "nsmasm-private-1"
            },
            "vpc_id": "vpc-03283d87772549e64"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "subnet-0d22fe6fcbd3cf48d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:subnet/subnet-015d0dc4711f22810",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015d0dc4711f22810",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "989311237020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nsmasm-private-2"
            },
            "tags_all": {
              "Name": "nsmasm-private-2"
            },
            "vpc_id": "vpc-03283d87772549e64"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "subnet-015d0dc4711f22810",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:subnet/subnet-026ff6b74137fed6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026ff6b74137fed6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "989311237020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nsmasm-public-1"
            },
            "tags_all": {
              "Name": "nsmasm-public-1"
            },
            "vpc_id": "vpc-03283d87772549e64"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "subnet-026ff6b74137fed6f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:subnet/subnet-023138c4d81b7f9e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023138c4d81b7f9e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "989311237020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nsmasm-public-2"
            },
            "tags_all": {
              "Name": "nsmasm-public-2"
            },
            "vpc_id": "vpc-03283d87772549e64"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "subnet-023138c4d81b7f9e4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:vpc/vpc-03283d87772549e64",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c3a795197ebe712",
            "default_route_table_id": "rtb-0e24152bf930e8036",
            "default_security_group_id": "sg-01520a974a30cd6b2",
            "dhcp_options_id": "dopt-08c7de1e1eb38684d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03283d87772549e64",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e24152bf930e8036",
            "owner_id": "989311237020",
            "region": "us-east-1",
            "tags": {
              "Name": "nsmasm-vpc"
            },
            "tags_all": {
              "Name": "nsmasm-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "vpc-03283d87772549e64",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:security-group/sg-02d78acbe66062ae3",
            "description": "Permite trafico web entrante",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d78acbe66062ae3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nsmasm-alb-sg",
            "name_prefix": "",
            "owner_id": "989311237020",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nsmasm-alb-sg"
            },
            "tags_all": {
              "Name": "nsmasm-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03283d87772549e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "sg-02d78acbe66062ae3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:security-group/sg-09fc6b66487b0c4b9",
            "description": "Permite trafico desde LB3 y SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fc6b66487b0c4b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Trafico de APP Docker desde LB3",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d78acbe66062ae3"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "nsmasm-backend-sg",
            "name_prefix": "",
            "owner_id": "989311237020",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nsmasm-backend-sg"
            },
            "tags_all": {
              "Name": "nsmasm-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03283d87772549e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "sg-09fc6b66487b0c4b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eice_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:security-group/sg-07790e108115e6221",
            "description": "SG para el EC2 Instance Connect Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-07790e108115e6221",
            "ingress": [],
            "name": "nsmasm-eice-sg",
            "name_prefix": "",
            "owner_id": "989311237020",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nsmasm-eice-sg"
            },
            "tags_all": {
              "Name": "nsmasm-eice-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03283d87772549e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "sg-07790e108115e6221",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:security-group/sg-04e2575cd1e15ba3e",
            "description": "Permite MySQL solo desde el Backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e2575cd1e15ba3e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Acceso MySQL desde Backend",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09fc6b66487b0c4b9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "nsmasm-rds-sg",
            "name_prefix": "",
            "owner_id": "989311237020",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nsmasm-rds-sg"
            },
            "tags_all": {
              "Name": "nsmasm-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03283d87772549e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "sg-04e2575cd1e15ba3e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.backend_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:989311237020:security-group/sg-0c77a2408c2e0af02",
            "description": "Permite HTTP desde el LB2 y SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c77a2408c2e0af02",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP desde LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d78acbe66062ae3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nsmasm-web-sg",
            "name_prefix": "",
            "owner_id": "989311237020",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nsmasm-web-sg"
            },
            "tags_all": {
              "Name": "nsmasm-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03283d87772549e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "989311237020",
            "id": "sg-0c77a2408c2e0af02",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_groups.aws_security_group.alb_sg"
          ]
        }
      ]
    }
  ]
}